# currency_calculator

./: Cargo.toml  README.md  fixtures.json
src/: lib.rs  main.rs
